--- a/perf/index.html
+++ b/perf/index.html
@@ -4,17 +4,17 @@
     <head>
         <title>Performance Comparisons — Vue.js</title>
         <meta charset="utf-8">
-        <meta name="description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
+        <meta name="description" content="Vue.js - Le Framework JavaScript Évolutif">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <meta property="og:type" content="article">
         <meta property="og:title" content="Performance Comparisons — Vue.js">
-        <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
+        <meta property="og:description" content="Vue.js - Le Framework JavaScript Évolutif">
         <meta property="og:image" content="https://vuejs.org//images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Performance Comparisons — Vue.js">
-        <meta name="twitter:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
+        <meta name="twitter:description" content="Vue.js - Le Framework JavaScript Évolutif">
         <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/images/icons/apple-icon-57x57.png">
@@ -103,6 +103,7 @@
     <li><h4>Liste de ressources</h4></li>
     <li><ul>
       <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">Dépôt officiel</a></li>
+      <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">Curation Vue</a></li>
       <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue</a></li>
     </ul></li>
   </ul>
@@ -166,6 +167,7 @@
     <li><h4>Liste de ressources</h4></li>
     <li><ul>
       <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">Dépôt officiel</a></li>
+      <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">Curation Vue</a></li>
       <li><a href="https://github.com/vuejs/awesome-vue" class="nav-link" target="_blank">Awesome Vue</a></li>
     </ul></li>
   </ul>
