--- a/v2/guide/team.html
+++ b/v2/guide/team.html
@@ -642,7 +642,7 @@
           <dt>Cœur de Vue</dt>
           <dd>
             <ul>
-              <li v-for="dépôt à profile.reposOfficial">
+              <li v-for="repo in profile.reposOfficial">
                 <a :href="githubUrl('vuejs', repo)" target=_blank>{{ repo }}</a>
               </li>
             </ul>
@@ -652,7 +652,7 @@
           <dt>Écosystème</dt>
           <dd>
             <ul>
-              <li v-for="dépôt à profile.reposPersonal">
+              <li v-for="repo in profile.reposPersonal">
                 <a :href="githubUrl(profile.github, repo)" target=_blank>{{ repo }}</a>
               </li>
             </ul>
@@ -734,13 +734,13 @@
         <i v-if="isSorting" class="fa fa-refresh rotating-clockwise"></i>
         <template v-else="">
           <i class="fa fa-map-marker"></i>
-          <span>qui est près de moi</span>
+          <span>Qui est près de moi ?</span>
         </template>
       </button>
     </h2>
 
     <p v-if="errorGettingLocation" class="tip">
-      N'a pas trouver de lieu.
+      Impossible d'obtenir votre localisation.
     </p>
 
     <p>
@@ -761,13 +761,13 @@
         <i v-if="isSorting" class="fa fa-refresh rotating-clockwise"></i>
         <template v-else="">
           <i class="fa fa-map-marker"></i>
-          <span>qui est près de moi</span>
+          <span>Qui est près de moi ?</span>
         </template>
       </button>
     </h2>
 
     <p v-if="errorGettingLocation" class="tip">
-      N'a pas trouver de lieu.
+      Impossible d'obtenir votre localisation.
     </p>
 
     <p>
@@ -1329,7 +1329,7 @@
                   'class="user-match" ' +
                   'title="' +
                     vm.profile.name +
-                    ' peut discuter techniquement avec vous dans votre langue préférée.' +
+                    ' peut donner des présentations techniques dans votre langue préférée.' +
                   '"' +
                 '\>' + language + '</span>'
               )
