--- a/v2/guide/plugins.html
+++ b/v2/guide/plugins.html
@@ -638,7 +638,7 @@
 </li>
 <li><p>Ajouter une ou plusieurs ressources globales : directives, filters, transitions, etc. Par ex. <a href="https://github.com/vuejs/vue-touch" target="_blank" rel="external">vue-touch</a></p>
 </li>
-<li><p>Ajouter plusieurs options de composant avec un mixin global. Par ex. <a href="https://github.com/vuejs/vuex" target="_blank" rel="external">vuex</a></p>
+<li><p>Ajouter plusieurs options de composant avec un mixin global. Par ex. <a href="https://github.com/vuejs/vue-router" target="_blank" rel="external">vue-router</a></p>
 </li>
 <li><p>Ajouter des méthodes d’instance de Vue en les reliant au prototype de Vue.</p>
 </li>
