--- a/v2/guide/plugins.html
+++ b/v2/guide/plugins.html
@@ -815,9 +815,23 @@
       </div>
     
     <div class="footer">
+      <script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+<div class="bsa-cpc"></div>
+<script>
+  (function(){
+    if(typeof _bsa !== 'undefined' && _bsa) {
+    _bsa.init('default', 'CKYD62QM', 'placement:vuejsorg', {
+      target: '.bsa-cpc',
+      align: 'horizontal',
+      disable_css: 'true'
+    });
+      }
+  })();
+</script>
+
       Une erreur dans cette page ? Envie de contribuer à la traduction ?
       <a href="https://github.com/vuejs-fr/vuejs.org/blob/master/src/v2/guide/plugins.md" target="_blank">
-        Éditez cette page sur Github !
+        Éditez cette page sur GitHub !
       </a>
     </div>
 </div>
