--- a/v2/guide/team.html
+++ b/v2/guide/team.html
@@ -1426,7 +1426,7 @@
         orgUrl: 'https://www.orchard-id.com/'
       },
       reposPersonal: [
-        'vuejs-fr/vuejs.org', 'Haeresis/node-atlas-hello-vue'
+        'vuejs-fr/*', 'Haeresis/node-atlas-hello-vue'
       ],
       links: [
         'https://node-atlas.js.org/', 'https://blog.lesieur.name/'
