--- a/v2/examples/hackernews.html
+++ b/v2/examples/hackernews.html
@@ -342,9 +342,9 @@
 <p>Ceci est un build clone du site HackerNews (HN) utilisant l’API Firebase HN officielle, Vue 2.0 + Vue Router + Vuex, avec un rendu côté serveur.</p>
 </blockquote>
 
-<div style="max-width:600px">
+<div style="max-width: 600px;">
   <a href="https://github.com/vuejs/vue-hackernews-2.0" target="_blank">
-    <img style="width:100%" src="/images/hn.png">
+    <img style="width: 100%;" src="/images/hn.png">
   </a>
 </div>
 
