--- a/v2/cookbook/index.html
+++ b/v2/cookbook/index.html
@@ -284,7 +284,7 @@
 <ul>
 <li><p><strong>Plus focalisé</strong> : Dans le guide, nous racontons essentiellement une histoire. Chaque section se construit sur la base des précédentes et présume la connaissance de celles-ci. Dans le <em>cookbook</em>, chaque recette peut et devrait se suffire à elle-même. Cela signifie que les recettes peuvent se focaliser sur un aspect spécifique de Vue, plutôt que d’avoir à donner un aperçu global.</p>
 </li>
-<li><p><strong>Plus de profondeur</strong> : Pour éviter de rendre le guide trop long, nous essayons d’inclure seulement les exemples les plus simples possibles pour vous aider à comprendre chaque fonctionnalité. Puis nous passons à autre chose. Dans le <em>cookbook</em>, nous pouvons inclure des exemples plus complexes, combinant les fonctionnalités de façon intéressante. Chaque recette peut être aussi longue et détaillée que besoin, afin de pleinement explorer son sujet.</p>
+<li><p><strong>Plus de profondeur</strong> : Pour éviter de rendre le guide trop long, nous essayons d’inclure seulement les exemples les plus simples possible pour vous aider à comprendre chaque fonctionnalité. Puis nous passons à autre chose. Dans le <em>cookbook</em>, nous pouvons inclure des exemples plus complexes, combinant les fonctionnalités de façon intéressante. Chaque recette peut être aussi longue et détaillée que besoin, afin de pleinement explorer son sujet.</p>
 </li>
 <li><p><strong>Enseigner JavaScript</strong> : Dans le guide, nous supposons que le lecteur est au moins moyennement familier avec la norme ES5 de JavaScript. Par exemple, nous n’expliquerons pas comment <code>Array.prototype.filter</code> fonctionne au sein d’une propriété calculée qui filtre une liste. Dans le <em>cookbook</em> en revanche, des fonctionnalités essentielles de JavaScript (y-compris ES6/2015+) peuvent être explorées et expliquées pour montrer comment elles nous aident à construire de meilleures applications Vue.</p>
 </li>
@@ -304,9 +304,9 @@
 </li>
 <li><p>Décrire le problème plutôt que de supposer que le lecteur est familier avec</p>
 </li>
-<li><p>Expliquer le processus au delà du simple résultat final</p>
+<li><p>Expliquer le processus au-delà du simple résultat final</p>
 </li>
-<li><p>Expliquer le pour et le contre de votre approche, en indiquant dans quels cas elle est apropriée ou non</p>
+<li><p>Expliquer le pour et le contre de votre approche, en indiquant dans quels cas elle est appropriée ou non</p>
 </li>
 <li><p>Mentionner des solutions alternatives si c’est pertinent, mais garder les explications en profondeur pour une autre recette.</p>
 </li>
