--- a/v2/examples/deepstream.html
+++ b/v2/examples/deepstream.html
@@ -339,7 +339,7 @@
       <h1>Exemple Temps réel avec deepstreamHub</h1>
     
     <blockquote>
-<p>Cet exemple utilise <a href="https://deepstreamhub.com/" target="_blank" rel="external">deepstreamHub</a> pour synchroniser les données en temps réel, émettre des évènements et faire de l’intéraction distante entre clients (vous pouvez l’ouvrir dans plusieurs fenêtres de navigateurs).</p>
+<p>Cet exemple utilise <a href="https://deepstreamhub.com/" target="_blank" rel="external">deepstreamHub</a> pour synchroniser les données en temps réel, émettre des évènements et faire de l’interaction distante entre clients (vous pouvez l’ouvrir dans plusieurs fenêtres de navigateurs).</p>
 </blockquote>
 <iframe width="100%" height="500" src="https://jsfiddle.net/yyx990803/ff0sp9hw/embedded/result,html,js,css" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
