--- a/perf/index.html
+++ b/perf/index.html
@@ -159,6 +159,7 @@
     <li><a href="https://vuejs.org/perf/index.html" class="nav-link" target="_blank">English</a></li>
     <li><a href="https://br.vuejs.org/perf/index.html" class="nav-link" target="_blank">Português</a></li>
     <li><a href="https://ru.vuejs.org/perf/index.html" class="nav-link" target="_blank">Русский</a></li>
+    <li><a href="https://vi.vuejs.org/perf/index.html" class="nav-link" target="_blank">Tiếng Việt</a></li>
   </ul>
 </li>
 
@@ -250,6 +251,7 @@
     <li><a href="https://vuejs.org/perf/index.html" class="nav-link" target="_blank">English</a></li>
     <li><a href="https://br.vuejs.org/perf/index.html" class="nav-link" target="_blank">Português</a></li>
     <li><a href="https://ru.vuejs.org/perf/index.html" class="nav-link" target="_blank">Русский</a></li>
+    <li><a href="https://vi.vuejs.org/perf/index.html" class="nav-link" target="_blank">Tiếng Việt</a></li>
   </ul>
 </li>
 
