--- a/v2/guide/migration-vue-router.html
+++ b/v2/guide/migration-vue-router.html
@@ -159,6 +159,7 @@
     <li><a href="https://vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">English</a></li>
     <li><a href="https://br.vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">Português</a></li>
     <li><a href="https://ru.vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">Русский</a></li>
+    <li><a href="https://vi.vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">Tiếng Việt</a></li>
   </ul>
 </li>
 
@@ -251,6 +252,7 @@
     <li><a href="https://vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">English</a></li>
     <li><a href="https://br.vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">Português</a></li>
     <li><a href="https://ru.vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">Русский</a></li>
+    <li><a href="https://vi.vuejs.org/v2/guide/migration-vue-router.html" class="nav-link" target="_blank">Tiếng Việt</a></li>
   </ul>
 </li>
 
