--- a/v2/style-guide/index.html
+++ b/v2/style-guide/index.html
@@ -92,7 +92,7 @@
     <li><ul>
       <li><a href="/v2/guide/" class="nav-link current">Guide</a></li>
       <li><a href="/v2/api/" class="nav-link">API</a></li>
-      <li><a href="/v2/style-guide/" class="nav-link current">Guide de styles (En)</a></li>
+      <li><a href="/v2/style-guide/" class="nav-link current">Conventions</a></li>
       <li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
     </ul></li>
   </ul>
@@ -185,7 +185,7 @@
     <li><ul>
       <li><a href="/v2/guide/" class="nav-link current">Guide</a></li>
       <li><a href="/v2/api/" class="nav-link">API</a></li>
-      <li><a href="/v2/style-guide/" class="nav-link current">Guide de styles (En)</a></li>
+      <li><a href="/v2/style-guide/" class="nav-link current">Conventions</a></li>
       <li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
     </ul></li>
   </ul>
